methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:7: error: not found: value setGroundColor
  setGroundColor(c)
  ^FlowerPot:21: error: not found: value setGroundColor
  setGroundColor(Color.YELLOW)
  ^